@@ -28,7 +28,6 @@ body {
   max-width: $page-wrapper-width;
   margin: 0 auto;
   margin-bottom: 1em;
-  padding: .5em;
 }
 
 #header {
